Add ProfilePress discord disconnect in wp uers list
The plugin does not have a filter to add a custom column in profilepress customer table

--- a/admin/css/connect-profilepress-and-discord-admin.css
+++ b/admin/css/connect-profilepress-and-discord-admin.css
@@ -587,3 +587,7 @@
     display: inline-block;
     margin-left: 10px;  
   }
+  button.profilepress-disconnect-discord-user > img.ets-discord-logo-white{
+    max-width: 16px;
+    width: 16px;
+  }
