Add  review notice

--- a/admin/css/connect-profilepress-and-discord-admin.css
+++ b/admin/css/connect-profilepress-and-discord-admin.css
@@ -591,3 +591,26 @@
     max-width: 16px;
     width: 16px;
   }
+
+  /* Notification review */
+div.ets-profilepress-discord-review-notice{
+  background-color: #FFF;
+  -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.15);
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.15);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 10px !important;
+  position: relative;
+}
+
+div.ets-profilepress-discord-review-notice div.ets-profilepress-discord-notice-icon{
+  background-image: url(../images/icon.png);
+  background-position: left center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  min-width: 150px;
+}
+div.ets-profilepress-discord-review-notice div.ets-profilepress-discord-notice-content{
+  padding: 20px;
+}
